<resources>
    <string name="app_name">Registro de Deudas</string>
    <string name="str_balance">Balance deudas</string>
    <string name="str_dedudas_pendiente">Deudas pendientes</string>
    <string name="str_dedudas_pendientes">Deudas pendientes</string>
    <string name="str_dedudas_saldadas">Deudas saldadas</string>
    <string name="str_deudas_pendientes">Deudas pendientes</string>
    <string name="str_deudas_saldadas">Deudas saldadas</string>
    <string name="str_menu_principal">Principal</string>
    <string name="str_menu_pendientes">Deudas pendientes</string>
    <string name="str_menu_saldadas">Deudas saldadas</string>
    <string name="str_menu_ingresos">Ingresos</string>
    <string name="str_menu_reportes">Reportes</string>
    <string name="str_menu_notificacion">Notificaciones</string>
    <string name="str_menu_salir">Salir</string>
    <string name="str_menu_opciones">Opciones</string>
    <string name="str_txt_fecha_prueba"><u>2017/08/01</u></string>
    <string name="str_txt_total">Total:</string>
    <string name="str_pendientes">Pendientes:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_txt_saldados">Saldados:</string>
    <string name="str_no_deudas">No tiene deudas registradas</string>
    <string name="str_cargando_info">Cargando información...</string>
    <string name="str_error_cargando_info">Error cargando información</string>
    <string name="str_edt_nombre_deuda">Digite nombre</string>
    <string name="str_edt_valor_deuda">Digite valor</string>
    <string name="str_txt_fecha_deuda">Fecha de pago:</string>
    <string name="str_agregar_deuda">Guardar</string>
    <string name="str_campo_requerido">Campo requerido.</string>
    <string name="str_seleccione_una_fecha">Seleccione una fecha</string>
    <string name="str_deuda_agregada">Deuda agregada con éxito</string>
    <string name="str_deuda_no_agregada">Error agregando deuda</string>
</resources>
