<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="c.iglesias.registrodedudas.Activity.AggDeudaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="99"
        android:orientation="vertical">

        <include
            layout="@layout/activity_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_til_nombre_deuda"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_edt_nombre_deuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_edt_nombre_deuda"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_til_valor_deuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_edt_valor_deuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_edt_valor_deuda"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_txt_fecha_deuda"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_txt_fecha_deuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/str_txt_fecha_prueba"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/id_btn_guadar_deuda"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_button_vertical"
            android:text="@string/str_agregar_deuda"
            android:textColor="@android:color/white"
            android:theme="@style/ThemeButtonLogin" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="26dp"
        android:background="@color/colorAccent" />
</LinearLayout>
