<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/activity_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/str_balance"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@android:color/white">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.app.progresviews.ProgressLine
                            android:id="@+id/id_prg_line_pendientes"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            app:definition="@string/str_deudas_pendientes"
                            app:lineBarWidth="7dp"
                            app:lineProgressColor="@android:color/holo_green_light"
                            app:underLineColor="@color/colorPrimary"
                            app:value="0"
                            app:valueDefTextSize="20sp"
                            app:valuePercentage="0" />


                        <com.app.progresviews.ProgressLine
                            android:id="@+id/id_prg_line_saldadas"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            app:definition="@string/str_dedudas_saldadas"
                            app:lineBarWidth="7dp"
                            app:lineProgressColor="@color/colorAccent"
                            app:underLineColor="@color/colorPrimary"
                            app:value="0"
                            app:valueDefTextSize="20sp"
                            app:valuePercentage="0" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@android:color/white">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="16dp"
                            android:gravity="left"
                            android:text="@string/str_deudas_pendientes"
                            android:textColor="@color/colorPrimary"
                            android:textSize="21dp" />

                        <com.app.progresviews.ProgressWheel
                            android:id="@+id/id_prg_wheel_saldadas"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            app:barWidth="17dp"
                            app:countText="0"
                            app:countTextColor="@android:color/black"
                            app:countTextSize="20sp"
                            app:defTextColor="@android:color/black"
                            app:defTextSize="10sp"
                            app:definitionText="aslkdjalksd"
                            app:marginBtwText="15dp"
                            app:percentage="90"
                            app:progressColor="#64b324" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@android:color/white">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="16dp"
                            android:gravity="left"
                            android:text="@string/str_deudas_saldadas"
                            android:textColor="@color/colorPrimary"
                            android:textSize="21dp" />

                        <com.app.progresviews.ProgressWheel
                            android:id="@+id/id_prg_wheel_pendientes"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            app:barWidth="17dp"
                            app:countText="0"
                            app:countTextColor="@android:color/black"
                            app:countTextSize="20sp"
                            app:defTextColor="@android:color/black"
                            app:defTextSize="10sp"
                            app:definitionText="alsdasdj"
                            app:marginBtwText="15dp"
                            app:percentage="90"
                            app:progressColor="@color/colorAccent" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <!-- Layout del menú lateral (Navigation View) -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_navview"
        app:menu="@menu/menu_navview" />

</android.support.v4.widget.DrawerLayout>
